Add native testing / cleanup GraalVM configuration